@@ -5,6 +5,7 @@
 ==== GtkUI ====
 	* Attempt to register as the default magnet uri handler in GNOME on startup
 	* Properly show 100.00% and reduce number of progress bar updates during a torrent creation
+	* Fix crash in Windows when creating a torrent
 	
 === Deluge 1.2.0_rc4 (24 November 2009) ===
 ==== Core ====
